# Klin_university

./: .env.example  README.md  pyproject.toml
data/: invalid_data.xlsx  pattern.xlsx  valid_data.xlsx
src/api/: filters.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
src/core/: admin.py  models.py  services.py  signals.py
src/core/management/commands/: load_initial_data.py
src/core/migrations/: 0001_initial.py  0002_worker_updated_at_and_more.py
src/employees/: settings.py  urls.py
tests/: conftest.py  factories.py  test_content.py  test_import_excel.py  test_logic.py  test_routes.py
